--- a/k8s/petclinic_chart/templates/api-gateway-deployment.yaml
+++ b/k8s/petclinic_chart/templates/api-gateway-deployment.yaml
@@ -36,6 +36,10 @@ spec:
           ports:
             - containerPort: 8080
               protocol: TCP
+      initContainers:
+        - name: init-discovery-server
+          image: busybox
+          command: ['sh', '-c', 'until nc -z discovery-server:8761; do echo waiting for discovery-server; sleep 2; done;']
       imagePullSecrets:
         - name: regcred
       restartPolicy: Always
