--- a/k8s/petclinic_chart/templates/discovery-server-deployment.yaml
+++ b/k8s/petclinic_chart/templates/discovery-server-deployment.yaml
@@ -28,6 +28,10 @@ spec:
           ports:
             - containerPort: 8761
               protocol: TCP
+      initContainers:
+        - name: init-config-server
+          image: busybox
+          command: ['sh', '-c', 'until nc -z config-server:8888; do echo waiting for config-server; sleep 2; done;']
       imagePullSecrets:
         - name: regcred
       restartPolicy: Always
